Fixes: NB#283241 - [TASK] Increase visibility time of the scroll indicator.

--- a/base/meegotouch/libmeegotouchviews/style/mpositionindicatorstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mpositionindicatorstyle.css
@@ -14,6 +14,6 @@ MPositionIndicatorStyle {
     margin-right:       0.4mm;
 
     min-indicator-size: 2mm;
-    hide-timeout: 1000;
+    hide-timeout: 1500;
 }
 
